package org.example.dental.models.enums;

public enum PaymentType {
    CASH,
    CARD
}
